Fix Button on mobile view !

--- a/style.css
+++ b/style.css
@@ -666,7 +666,9 @@ text-align:center !important;
     width: 84% !important;
 }
 /** END NEW Styling for Filters **/
-
+.filter-btn {
+    margin: 0 !important;
+}
 @media only screen and (max-width: 768px)  {
     
     .filter-wrapper {
@@ -704,16 +706,15 @@ text-align:center !important;
     }
     
     .course-filter .filter-btn {
-        margin-left: 6px;
+        margin-left: 6px !important;
+        min-height: 100% !important;
     }
 
     .course-filter .filter-btn button {
-        display:flex;
-        align-items: center;
-        justify-content: center;
-        margin:auto !important;
-        padding:13px 20px !important;
-        height: 100%;
+        display: block;
+        margin: auto !important;
+        padding: 13px 20px !important;
+        height: 100% !important;
     }
     
     .filter-box{
@@ -765,30 +766,29 @@ text-align:center !important;
     }
 
     .course-filter .filter-btn button {
-        display:flex;
-        align-items: center;
-        justify-content: center;
+        display:block;
         margin: auto !important;
         padding: 3px 20px !important;
         font-size: 0.9rem !important;
+        height: 100%;
     }
 
     .course-filter .filter-box select {
         font-size: 13px;
         padding: 0px 5px;
-        height: 30px;
+        /* height: 30px; */
     }
 
-    .custom-search .course-filter .filter-box select {
+    /* .custom-search .course-filter .filter-box select {
         height: 38px;
-    }
+    } */
 }
 
 @media only screen and (max-width: 360px){
     .course-filter .filter-box select {
         font-size: 13px;
         padding: 0px 5px;
-        height: 38px;
+        /* height: 38px; */
     }
 }
 .card-wide{
